test/opends-documentation/opends-documentation-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dissco-opends-documentation
  labels:
    app: dissco-opends-documentation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dissco-opends-documentation
  template:
    metadata:
      labels:
        app: dissco-opends-documentation
    spec:
      automountServiceAccountToken: false
      containers:
        - name: dissco-opends-documentation
          image: public.ecr.aws/dissco/opends-terms-documentation:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
          resources:
            requests:
              memory: "150Mi"
              cpu: "100m"
            limits:
              memory: "150Mi"
              cpu: "100m"
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            failureThreshold: 2
